qp_rhs seems to work as expected now. Next thing to work on:     - make sure u_rhs works similarly     - try out propagate_q_p, and propagate_u

--- a/batteryAgent-Copy1.ipynb
+++ b/batteryAgent-Copy1.ipynb
@@ -557,7 +557,7 @@
     }
    ],
    "source": [
-    "bat.qp_rhs(2,3,4,1, 2,3,4,1, 2,3,4,1, 2,3,4,3)"
+    "bat.qp_rhs(2,3,4,1,2,3,4,1,2,3,4,1,2,3,4,3)"
    ]
   },
   {
